# IoTHubReceiptParser

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: conftest.py  odbc-installer.sh  pyproject.toml
src/backend/: __init__.py  db.py  decorators.py  main.py  parser.py  repositories.py  settings.py
src/backend/models/: __init__.py  payment_method.py  receipt.py  receipt_item.py  tax_rate.py
src/backend/schemas/: __init__.py  receipt.py  receipt_item.py
src/parser/: main.py  parser.py  repositories.py
src/parser/models/: __init__.py  payment_method.py  receipt.py  receipt_item.py  tax_rate.py
src/parser/schemas/: __init__.py  receipt.py  receipt_item.py
src/tests/: test_parsers.py
