[tool.poetry]
name = "iothubreceiptparser"
version = "0.1.0"
description = "Simple CLI tool for parsing IoT Hub receipts to CUBE API format"
authors = ["Roland Sobczak <rolandsobczak@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipython = "^8.15.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
