[tool.poetry]
name = "iothubreceiptparser"
version = "0.1.0"
description = "Simple CLI tool for parsing IoT Hub receipts to CUBE API format"
authors = ["Roland Sobczak <rolandsobczak@icloud.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.4.0"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.21"
jaydebeapi = "^1.2.3"
pyodbc = "^4.0.39"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipython = "^8.15.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
receipt-parser = "backend:main"